flask/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: prod-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: docker.io/seymaca/myapp-py:21
          ports:
            - containerPort: 80
